--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -7,63 +7,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="#FFF"
     android:keepScreenOn="true">
 
-    <ImageView
-        android:id="@+id/previewPane"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:scaleType="fitStart">
-    </ImageView>
-
-
-    <mx.ivancastro.android_search_by_image.common.GraphicOverlay
-        android:id="@+id/previewOverlay"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"/>
-
-    <FrameLayout
-        android:id="@+id/controlPanel"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:background="#000">
-
-        <!--
-        <Spinner
-            android:id="@+id/featureSelector"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right" />
--->
-        <!--
-        <Spinner
-            android:id="@+id/sizeSelector"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal" /> -->
-
-        <Button
-            android:id="@+id/getImageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:text="Tomar foto" />
-
-        <Button
-            android:id="@+id/getActionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="accion"
-            android:layout_gravity="center"/>
-
-    </FrameLayout>
+    <include layout="@layout/fire_top"></include>
 
 </RelativeLayout>
