--- a/app/src/main/res/layout/fire_top.xml
+++ b/app/src/main/res/layout/fire_top.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000"
+    android:background="@color/colorBackground"
     android:keepScreenOn="true">
 
     <FrameLayout
